# sudopay

./: .env.example  .justfile  Cargo.toml  docker-compose.yml  example.rs  readme.md
components/common/: Cargo.toml
components/common/src/: types.rs  utils.rs
components/config/: Cargo.toml
components/config/src/: config.rs  lib.rs
components/db/: Cargo.toml
components/db/src/: balances.rs  deposits.rs  lib.rs  users.rs
components/price/: Cargo.toml
components/price/src/: lib.rs  main.rs
components/telegram/: Cargo.toml
components/telegram/src/: deposit.rs  main.rs  send.rs  start.rs  types.rs  utils.rs
components/transaction/: Cargo.toml
components/transaction/src/: lib.rs
components/transaction_listener/: Cargo.toml
components/transaction_listener/src/: blastscan.rs  main.rs  notifications.rs
components/transaction_sender/: Cargo.toml  abi.json
components/transaction_sender/src/: lib.rs  main.rs
components/utils/: Cargo.toml
components/utils/src/: lib.rs
migrations/: 20240203131743_init.down.sql  20240203131743_init.up.sql
scripts/: compose.sh
