[package]
name = "db"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
anyhow = { workspace = true }
sqlx = { workspace = true }
ethers = { workspace = true }
rand = { workspace = true }
