[package]
name = "telegram"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
ethers = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
price = { path = '../price' }
teloxide = { version = "0.12", features = ["macros"] }
tokio = { workspace = true }
