[package]
name = "telegram"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
config = { path = "../config" }
ethers = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
price = { path = '../price' }
sqlx = { workspace = true }
tokio = { workspace = true }
common = { path = "../common" }
db = { path = "../db" }
num-traits = "0.2.18"
teloxide = { workspace = true }
transaction_sender = { path = "../transaction_sender" }
