[package]
name = "transaction"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
