[package]
name = "transaction_listener"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
db = { path = "../db" }
serde = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
reqwest = { workspace = true }
anyhow = { workspace = true }
config = { path = "../config" }
sqlx = { workpace = true }
itertools = { workspace = true }
log = { workspace = true }
