[package]
name = "transaction_sender"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { workspace = true }
config = { path = "../config" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
common = { path = "../common" }
