[package]
name = "utils"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ethers = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
